Bug 308001 - Crash when selecting "Edit Recent Addresses"
Summary: Crash when selecting "Edit Recent Addresses"
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-07 08:08 UTC by Graeme Hewson
Modified: 2012-10-07 09:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Graeme Hewson 2012-10-07 08:08:36 UTC
Application: kontact (4.9.2)
KDE Platform Version: 4.9.2
Qt Version: 4.8.2
Operating System: Linux 3.2.0-31-generic x86_64
Distribution: Ubuntu 12.04.1 LTS

-- Information about the crash:
- What I was doing when the application crashed:

1. In new mail composer, entered a few characters in the To: field, so that kmail showed a list of recent contacts.

2. Backspaced to clear the To: field.

3. Secondary-clicked the To: field and selected Edit Recent Contacts option. Crash occurred at this point.

If I restart kmail and just try to edit the recent contacts without doing steps 1&2 above, the crash doesn't occur.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fe2438527c0 (LWP 19944))]

Thread 4 (Thread 0x7fe226dcb700 (LWP 19945)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fe240043dec in WTF::TCMalloc_PageHeap::scavengerThread (this=0x7fe240a0cde0) at wtf/FastMalloc.cpp:2495
#2  0x00007fe240043f19 in WTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at wtf/FastMalloc.cpp:1618
#3  0x00007fe23b4f8e9a in start_thread (arg=0x7fe226dcb700) at pthread_create.c:308
#4  0x00007fe240d78dbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fe2264ca700 (LWP 19946)):
#0  0x00007fff996f88de in ?? ()
#1  0x00007fe23985c15d in __GI_clock_gettime (clock_id=<optimized out>, tp=<optimized out>) at ../sysdeps/unix/clock_gettime.c:116
#2  0x00007fe241416c64 in do_gettime (frac=0x7fe2264c9ba8, sec=0x7fe2264c9ba0) at tools/qelapsedtimer_unix.cpp:123
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#4  0x00007fe2414ef06d in QTimerInfoList::updateCurrentTime (this=0x7fe220002860) at kernel/qeventdispatcher_unix.cpp:343
#5  0x00007fe2414ef3a3 in QTimerInfoList::timerWait (this=0x7fe220002860, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#6  0x00007fe2414ede5c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7fe2264c9c5c) at kernel/qeventdispatcher_glib.cpp:136
#7  0x00007fe23b02b846 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007fe23b02bf5b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#9  0x00007fe23b02c164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007fe2414ee906 in QEventDispatcherGlib::processEvents (this=0x7fe2200008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#11 0x00007fe2414bde42 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#12 0x00007fe2414be097 in QEventLoop::exec (this=0x7fe2264c9dc0, flags=...) at kernel/qeventloop.cpp:204
#13 0x00007fe2413bd057 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#14 0x00007fe2413c007b in QThreadPrivate::start (arg=0x1442600) at thread/qthread_unix.cpp:307
#15 0x00007fe23b4f8e9a in start_thread (arg=0x7fe2264ca700) at pthread_create.c:308
#16 0x00007fe240d78dbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#17 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fe1d9c5e700 (LWP 19950)):
#0  0x00007fe240d6d403 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fe23b02c036 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe23b02c164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe2414ee906 in QEventDispatcherGlib::processEvents (this=0x7fe1d40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fe2414bde42 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fe2414be097 in QEventLoop::exec (this=0x7fe1d9c5dd90, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fe2413bd057 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fe24149db4f in QInotifyFileSystemWatcherEngine::run (this=0x19712c0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fe2413c007b in QThreadPrivate::start (arg=0x19712c0) at thread/qthread_unix.cpp:307
#9  0x00007fe23b4f8e9a in start_thread (arg=0x7fe1d9c5e700) at pthread_create.c:308
#10 0x00007fe240d78dbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fe2438527c0 (LWP 19944)):
[KCrash Handler]
#6  0x0000000000000000 in ?? ()
#7  0x00007fe1de241213 in MessageComposer::ComposerLineEdit::contextMenuEvent(QContextMenuEvent*) () from /usr/lib/libmessagecomposer.so.4
#8  0x00007fe241f09d04 in QWidget::event (this=0x23a6540, event=0x7fff99671320) at kernel/qwidget.cpp:8538
#9  0x00007fe2422d8777 in QLineEdit::event (this=0x23a6540, e=0x7fff99671320) at widgets/qlineedit.cpp:1524
#10 0x00007fe242cacb4b in KLineEdit::event (this=0x23a6540, ev=0x7fff99671320) at ../../kdeui/widgets/klineedit.cpp:1403
#11 0x00007fe241eb97b4 in notify_helper (e=0x7fff99671320, receiver=0x23a6540, this=0x12f5b90) at kernel/qapplication.cpp:4556
#12 QApplicationPrivate::notify_helper (this=0x12f5b90, receiver=0x23a6540, e=0x7fff99671320) at kernel/qapplication.cpp:4528
#13 0x00007fe241ebea3d in QApplication::notify (this=<optimized out>, receiver=0x23a6540, e=0x7fff99671320) at kernel/qapplication.cpp:4178
#14 0x00007fe242bf4756 in KApplication::notify (this=0x7fff99671fd0, receiver=0x23a6540, event=0x7fff99671320) at ../../kdeui/kernel/kapplication.cpp:311
#15 0x00007fe2414bf30c in QCoreApplication::notifyInternal (this=0x7fff99671fd0, receiver=0x23a6540, event=0x7fff99671320) at kernel/qcoreapplication.cpp:915
#16 0x00007fe241f39b78 in sendSpontaneousEvent (event=0x7fff99671320, receiver=0x23a6540) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#17 QETWidget::translateMouseEvent (this=<optimized out>, event=<optimized out>) at kernel/qapplication_x11.cpp:4622
#18 0x00007fe241f38ace in QApplication::x11ProcessEvent (this=0x7fff99671fd0, event=0x7fff99671bc0) at kernel/qapplication_x11.cpp:3732
#19 0x00007fe241f62052 in x11EventSourceDispatch (s=0x12f5380, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#20 0x00007fe23b02bd53 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x00007fe23b02c0a0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#22 0x00007fe23b02c164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x00007fe2414ee89f in QEventDispatcherGlib::processEvents (this=0x12c0c10, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#24 0x00007fe241f61cde in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#25 0x00007fe2414bde42 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#26 0x00007fe2414be097 in QEventLoop::exec (this=0x7fff99671f60, flags=...) at kernel/qeventloop.cpp:204
#27 0x00007fe2414c33e7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#28 0x00000000004035c9 in ?? ()
#29 0x00007fe240ca676d in __libc_start_main (main=0x402ae0, argc=1, ubp_av=0x7fff996725f8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff996725e8) at libc-start.c:226
#30 0x0000000000403b31 in _start ()

This bug may be a duplicate of or related to bug 302314.

Possible duplicates by query: bug 304424, bug 302314.

Reported using DrKonqi
Comment 1 Graeme Hewson 2012-10-07 08:12:03 UTC
That should be "Edit Recent Addresses", not "Edit Recent Contacts". I was referring to bug 302314, rather than kmail itself, when writing the report.
Comment 2 Laurent Montel 2012-10-07 09:11:54 UTC
Git commit fc18dac8e9976a0e64991ab75c67d55b078f0af4 by Montel Laurent.
Committed on 07/10/2012 at 11:11.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 308001 - Crash when selecting "Edit Recent Addresses"

FIXED-IN: 4.9.3

M  +1    -1    messagecomposer/composerlineedit.cpp

http://commits.kde.org/kdepim/fc18dac8e9976a0e64991ab75c67d55b078f0af4