Fix Bug 308001 - Crash when selecting "Edit Recent Addresses"

FIXED-IN: 4.9.3
BUG: 308001