messagecomposer/composerlineedit.cpp
@@ -204,7 +204,7 @@ void ComposerLineEdit::groupDropExpandResult( KJob* job )
 #ifndef QT_NO_CONTEXTMENU
 void ComposerLineEdit::contextMenuEvent( QContextMenuEvent*e )
 {
-  QMenu *popup = createStandardContextMenu();
+  QPointer<QMenu> popup = createStandardContextMenu();
   if ( popup ) { // can be 0 on platforms with only a touch interface
     popup->addSeparator();
     QAction* act = popup->addAction( i18n( "Edit Recent Addresses..." ));
